# ot-harjoitustyo

./: .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/htmlcov/: _home_antti__cache_pypoetry_virtualenvs_maksukortti-kRU_rKHF-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_antti__cache_pypoetry_virtualenvs_maksukortti-kRU_rKHF-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_antti__cache_pypoetry_virtualenvs_maksukortti-kRU_rKHF-py3_8_lib_python3_8_site-packages__pytest_capture_py.html  (+98 more)
src/: block.py  build.py  clock.py  config.py  db_connection.py  db_init.py  event.py  game_loop.py  game_renderer.py  gameloop.py  grid.py  high_scores.py  index.py  level.py  main_menu.py  pace.py  player_name_view.py  render.py  renderer.py  score.py  testi.py  ui_renderer.py
src/data/: scores.db
src/game_loop/: block.py  clock.py  event.py  game_loop.py  grid.py  level.py  pace.py  score.py
src/level_elements/: block.py  grid.py  pace.py
src/renderers/: game_renderer.py  renderer.py  ui_renderer.py
src/repository/: score_repository.py
src/tests/: block_test.py  game_loop_test.py  grid_test.py  level_test.py  pace_test.py  score_repository_test.py  score_test.py
src/ui/: high_scores.py  main_menu.py  player_name.py
src/ui/renderers/: game_renderer.py  renderer.py  ui_renderer.py
(+3 files in other folders)
